@@ -6,7 +6,7 @@
   <groupId>com.github.imrafaelmerino</groupId>
   <artifactId>avro-spec</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-RC1</version>
+  <version>1.0.0</version>
   <name>avro-spec</name>
   <description>The library offers a set of builders and utilities to construct Avro schemas from
     specs and provides serializers
@@ -32,25 +32,26 @@
     <url>https://github.com/imrafaelmerino/avro-spec.git</url>
   </scm>
   <properties>
-    <error-prone.version>2.19.0</error-prone.version>
+    <error-prone.version>2.36.0</error-prone.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <NEXUS-STAGING-MAVEN-PLUGIN.VERSION>1.6.12</NEXUS-STAGING-MAVEN-PLUGIN.VERSION>
     <MAVEN-GPG-PLUGIN.VERSION>1.6</MAVEN-GPG-PLUGIN.VERSION>
     <MAVEN-SOURCE-PLUGIN.VERSION>3.0.1</MAVEN-SOURCE-PLUGIN.VERSION>
-    <JACOCO-MAVEN-PLUGIN.VERSION>0.8.8</JACOCO-MAVEN-PLUGIN.VERSION>
     <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
-    <MAVEN-COMPILER-PLUGIN.VERSION>3.10.1</MAVEN-COMPILER-PLUGIN.VERSION>
-    <MAVEN-SUREFIRE-PLUGIN.VERSION>3.0.0-M6</MAVEN-SUREFIRE-PLUGIN.VERSION>
-    <MAVEN-JAR-PLUGIN.VERSION>3.2.2</MAVEN-JAR-PLUGIN.VERSION>
+    <MAVEN-COMPILER-PLUGIN.VERSION>3.13.0</MAVEN-COMPILER-PLUGIN.VERSION>
+    <MAVEN-SUREFIRE-PLUGIN.VERSION>3.5.2</MAVEN-SUREFIRE-PLUGIN.VERSION>
+    <MAVEN-JAR-PLUGIN.VERSION>3.4.2</MAVEN-JAR-PLUGIN.VERSION>
     <JUNIT-JUPITER-API.VERSION>5.8.2</JUNIT-JUPITER-API.VERSION>
     <JSON-VALUES.VERSION>14.0.0-RC3</JSON-VALUES.VERSION>
-    <MAVEN-JAVADOC-PLUGIN.VERSION>3.3.2</MAVEN-JAVADOC-PLUGIN.VERSION>
-    <sonar.organization>imrafaelmerino</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <MAVEN-JAVADOC-PLUGIN.VERSION>3.11.1</MAVEN-JAVADOC-PLUGIN.VERSION>
     <MAVEN-COMPILER-PLUGIN.SOURCE>21</MAVEN-COMPILER-PLUGIN.SOURCE>
     <MAVEN-COMPILER-PLUGIN.TARGET>21</MAVEN-COMPILER-PLUGIN.TARGET>
-    <AVRO-VERSION>1.11.3</AVRO-VERSION>
+    <AVRO-VERSION>1.12.0</AVRO-VERSION>
+    <KAFKA-AVRO-SERIALIZER.VERSION>7.7.1</KAFKA-AVRO-SERIALIZER.VERSION>
+    <JIO-TEST.VERSION>3.0.0-RC2</JIO-TEST.VERSION>
+    <LOGBACK-CLASSIC.VERSION>1.5.12</LOGBACK-CLASSIC.VERSION>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.github.imrafaelmerino</groupId>
@@ -61,14 +62,7 @@
     <dependency>
       <groupId>io.confluent</groupId>
       <artifactId>kafka-avro-serializer</artifactId>
-      <version>7.6.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>io.confluent</groupId>
-      <artifactId>kafka-json-schema-serializer</artifactId>
-      <version>7.6.0</version>
+      <version>${KAFKA-AVRO-SERIALIZER.VERSION}</version>
       <scope>provided</scope>
     </dependency>
 
@@ -81,14 +75,14 @@
     <dependency>
       <groupId>com.github.imrafaelmerino</groupId>
       <artifactId>jio-test</artifactId>
-      <version>1.0.0</version>
+      <version>${JIO-TEST.VERSION}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.9</version>
+      <version>${LOGBACK-CLASSIC.VERSION}</version>
       <scope>test</scope>
     </dependency>
 
@@ -97,8 +91,21 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.1.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>${MAVEN-COMPILER-PLUGIN.VERSION}</version>
         <configuration>
           <source>${MAVEN-COMPILER-PLUGIN.SOURCE}</source>
           <target>${MAVEN-COMPILER-PLUGIN.TARGET}</target>
@@ -106,7 +113,8 @@
           <encoding>${project.build.sourceEncoding}</encoding>
           <compilerArgs>
             <arg>-XDcompilePolicy=simple</arg>
-            <arg>-Xplugin:ErrorProne</arg>
+            <arg>--should-stop=ifError=FLOW</arg>
+            <arg>-Xplugin:ErrorProne -Xep:DeadException:WARN -Xep:GuardedBy:OFF</arg>
             <arg>-Xlint:all</arg>
           </compilerArgs>
           <annotationProcessorPaths>
@@ -117,16 +125,41 @@
             </path>
           </annotationProcessorPaths>
         </configuration>
+        <executions>
+          <execution>
+            <id>default-testCompile</id>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <compilerArgs>
+                <arg>--enable-preview</arg>
+              </compilerArgs>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${MAVEN-SUREFIRE-PLUGIN.VERSION}</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>${MAVEN-JAR-PLUGIN.VERSION}</version>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>avro_spec</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
